rhai/codegen/ui_tests/export_mod_extra_value.stderr
error: extraneous value
  --> ui_tests/export_mod_extra_value.rs:11:24
   |
11 | #[rhai_fn(return_raw = "yes")]
   |                        ^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> ui_tests/export_mod_extra_value.rs:22:8
   |
22 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of undeclared crate or module `test_mod`
